public/stylesheets/style.css
@import url(https://fonts.googleapis.com/css?family=Open+Sans:600,400,300);
@import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300);

* {
  margin-left: auto;
          margin-right: auto;
          margin-top: 3px;
          margin-bottom: 3px;
          text-align: center; 
}

footer {
  background: #ffffff;
  color: #000000;
  border-top: 0.0625em solid lightgray;
  bottom: 0;
  margin: 0 auto;
  width: 100%;
  height: 5em;
  position: absolute;
}
footer:before,
footer:after {
  content: "";
  display: table;
  clear: both;
}
footer p {
  float: left;
  text-align: center;
  width: 100%;
  padding: 1.25em;
}

